# strip-mcp

./: .gitignore  AGENTS.md  BENCHMARKS_AND_TESTS.md  CLAUDE.md  CONTRIBUTING.md  DISCUSSION.md  README.md  STRIP_V2_plan.md  STRIP_plan.md  blackboard.md  package-lock.json  package.json  pyproject.toml  test-proxy-config.json  test_proxy_live.py
docs/: ARCHITECTURE.md  BENCHMARKS_AND_TESTS.md  CLAUDE_CODE_PROXY.md  LOCAL_TOOL_FACADE.md  MCP_VS_STRIP_SCHEMA.md  MCP_VS_TOOLGATE_SCHEMA.md  README.md  STRIP_V2_plan.md
docs/agent-logs/: session-log.ndjson
examples/: basic_usage.py  benchmark_tokens.py  multi_mcp_agent_benchmark.py  multi_mcp_benchmark_report.json  playwright_smoke.py  strip_vs_full_benchmark.py  toolgate_vs_full_benchmark.py
src/strip_mcp/: __init__.py  cli.py  core.py  errors.py  node_discovery.py  registry.py  server.py  sync.py  types.py
src/strip_mcp/connection/: base.py  http.py  stdio.py
src/strip_mcp/proxy/: __init__.py  config.py  server.py
src/strip_mcp/setup/: __init__.py  hosts.py  models.py
src/toolgate/: __init__.py  catalog.py  cli.py  collector.py  core.py  daemon.py  errors.py  node_discovery.py  profiles.py  server.py  sync.py  types.py
src/toolgate/adapters/: __init__.py
src/toolgate/connection/: __init__.py  stdio.py
tests/: conftest.py  mock_mcp_server.py  test_catalog_profiles.py  test_cli_facade.py  test_connection_stdio.py  test_core.py  test_daemon.py  test_errors.py  test_orchestrator.py  test_proxy_server.py  test_registry.py  test_server.py  test_setup_discovery.py  test_transport.py
(+5 files in other folders)
