[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strip-mcp"
version = "0.1.0"
description = "MCP middleware that delivers tool info in stages — names first, schemas on demand"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/strip_mcp"]
